<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_blue">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_blue"
    tools:context=".Auth.SendCodeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <!--            Back-->
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp">
            </ImageView>

            <!--            page title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ver_code"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/ja"
                android:textColor="@color/white"
                android:textStyle="bold"></TextView>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_ver_code"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        android:fontFamily="@font/ja"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <!--        name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ver_code"
                android:layout_width="match_parent"
                android:hint="@string/Email"
                android:fontFamily="@font/ja"
                android:textSize="@dimen/textSize"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--    create account button-->
        <Button
            android:id="@+id/sendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbg"
            android:text="@string/sendCode"
            android:fontFamily="@font/ja"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="@dimen/textSize"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>