<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/dark_blue">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">



        <ImageView
            android:id="@+id/_video_thumb"
            android:layout_width="120dp"
            android:scaleType="fitXY"
            android:layout_height="match_parent"
            android:src="@drawable/ic_video_library_black_24dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="-10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/_video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/ja"
                    android:text="@string/video_title"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/_delet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_close_black_24dp"
                        />
                </LinearLayout>

            </LinearLayout>



            <TextView
                android:id="@+id/_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ja"
                android:lines="1"
                android:text="@string/video_desc"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/_fav_store_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/ja"
                android:text="@string/store_name"
                android:textColor="@color/white"
                android:textSize="14dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/ja"
                    android:text="157"
                    android:textColor="@color/gray"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/ja"
                    android:text="@string/views"
                    android:textColor="@color/gray"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>