<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/_call_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/ahmed"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/trans">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cahnnelname_toolbal"
                        android:layout_width="200dp"
                        android:fontFamily="@font/ja"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/voice_call"
                        android:textColor="#fff"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/_call_store_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ahmed"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calling"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textColor="#fff"
            />
        <TextView
            android:id="@+id/_call_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="20dp"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_keyboard_voice_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mute"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout

                android:id="@+id/speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_volume_up_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/_end_call"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/end_call"
            android:drawableRight="@drawable/ic_call_end_black_24dp"
            android:fontFamily="@font/ja"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:backgroundTint="#EC3838"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>