<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_blue"
    android:layout_height="match_parent">

    <LinearLayout


        android:orientation="vertical"
        android:background="@color/white_blue"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backbtn"
                    android:layout_width="@dimen/back_btn_size"
                    android:layout_height="@dimen/back_btn_size"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">



                    <TextView
                        android:id="@+id/cahnnelname_toolbal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/buynow"
                        android:fontFamily="@font/ja"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSize"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal"
                        />


                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/_product_img"
            android:layout_width="250dp"
            android:background="@drawable/appicon"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/_title"
            android:fontFamily="@font/ja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:fontFamily="@font/ja"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:paddingRight="5dp"
                android:fontFamily="@font/ja"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="Price after discount :"/>
            <TextView
                android:id="@+id/_new_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:paddingRight="20dp"
                android:fontFamily="@font/ja"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="new price"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:paddingRight="5dp"
                android:fontFamily="@font/ja"
                android:textSize="14dp"
                android:text="Price before discount : "/>

            <TextView
                android:id="@+id/_old_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:paddingRight="20dp"
                android:fontFamily="@font/ja"
                android:textSize="14dp"
                android:text="new price"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_your_data"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ja"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_high"
                android:textColorHint="@color/white"
                android:layout_marginTop="10dp"
                android:editable="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_delivery_name"
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:fontFamily="@font/ja"
                    android:editable="false"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_high"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_delivery_address"
                    android:layout_width="match_parent"
                    android:hint="address"
                    android:fontFamily="@font/ja"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_high"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/_delivery_phone"
                    android:layout_width="match_parent"
                    android:hint="phone"
                    android:fontFamily="@font/ja"
                    android:textSize="@dimen/textSize"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>



            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/radioGroup1"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ja"
                    android:text="Deliver my self" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/ja"
                    android:text="Deliver by Company" />
            </RadioGroup>
            <Button
                android:id="@+id/_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_now"
                android:fontFamily="@font/ja"
                android:backgroundTint="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue"
                android:layout_marginTop="@dimen/textSize"/>    </LinearLayout>
    </LinearLayout>
</ScrollView>